fix blurring

--- a/src/style.scss
+++ b/src/style.scss
@@ -133,7 +133,7 @@ ul {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   display: none;
   background-color: rgba(32, 32, 32, 0.2);
   backdrop-filter: blur(4px);
